[gd_scene load_steps=23 format=3 uid="uid://jdnrqh3qdvd8"]

[ext_resource type="Texture2D" uid="uid://cmr8bcq86xkkb" path="res://playerGrey_up1.png" id="1_hqtel"]
[ext_resource type="Script" uid="uid://dp8uw72h3o0vi" path="res://player.gd" id="1_sweqy"]
[ext_resource type="Texture2D" uid="uid://vj22dj2o0ocw" path="res://art/exohelian1.png" id="2_1jxqw"]
[ext_resource type="Texture2D" uid="uid://k4gukpoqmwsb" path="res://playerGrey_up2.png" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://c184osph1c74p" path="res://playerGrey_walk1.png" id="3_2hs0m"]
[ext_resource type="Texture2D" uid="uid://c1xshh0t6bsb" path="res://art/exohelian2.png" id="3_dw050"]
[ext_resource type="Texture2D" uid="uid://cwbcqqt5h5aq3" path="res://playerGrey_walk2.png" id="4_1jxqw"]
[ext_resource type="Texture2D" uid="uid://dn0oc15y8ov0i" path="res://art/Blast.png" id="8_dw050"]

[sub_resource type="Gradient" id="Gradient_b26j0"]
offsets = PackedFloat32Array(0.81592, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dw050"]
gradient = SubResource("Gradient_b26j0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b26j0"]
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 61.52
initial_velocity_max = 264.86
angular_velocity_min = -63.8
angular_velocity_max = 63.6
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.4
color_ramp = SubResource("GradientTexture1D_dw050")

[sub_resource type="Gradient" id="Gradient_nvl01"]
offsets = PackedFloat32Array(0, 0.511211, 1)
colors = PackedColorArray(0.414063, 0.0700887, 0.0345052, 1, 1, 0.513021, 0.0833333, 1, 0.239216, 0.0745098, 0.0352941, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ivps1"]
gradient = SubResource("Gradient_nvl01")
fill = 1
fill_from = Vector2(0.504274, 0.507123)
fill_to = Vector2(0.814815, 0.173789)

[sub_resource type="Gradient" id="Gradient_dw050"]
offsets = PackedFloat32Array(0.364723, 0.535127, 0.693573)
colors = PackedColorArray(0.179688, 1, 0.974365, 1, 0, 0.4, 0.552941, 0.65098, 0, 0.0235294, 0.694118, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b26j0"]
gradient = SubResource("Gradient_dw050")
width = 20
height = 20
fill = 1
fill_from = Vector2(0.481481, 0.507123)
fill_to = Vector2(0.330484, 0.88604)

[sub_resource type="Gradient" id="Gradient_n7ghd"]
colors = PackedColorArray(0, 1, 0.890625, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nvl01"]
gradient = SubResource("Gradient_n7ghd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ivps1"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 16.662
initial_velocity_min = 113.35
initial_velocity_max = 174.06
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_nvl01")

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1jxqw")
}, {
"duration": 1.0,
"texture": ExtResource("3_dw050")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hqtel")
}, {
"duration": 1.0,
"texture": ExtResource("2_sweqy")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2hs0m")
}, {
"duration": 1.0,
"texture": ExtResource("4_1jxqw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b26j0"]
radius = 35.0
height = 70.0

[sub_resource type="Gradient" id="Gradient_ivps1"]
offsets = PackedFloat32Array(0, 0.686099, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.919271, 0.919271, 0.919271, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_urp6f"]
gradient = SubResource("Gradient_ivps1")
fill = 1
fill_from = Vector2(0.495726, 0.501424)
fill_to = Vector2(0.843305, 0.877493)

[node name="Player" type="Area2D"]
script = ExtResource("1_sweqy")

[node name="ParticleBurst" type="GPUParticles2D" parent="."]
emitting = false
amount = 100
texture = ExtResource("8_dw050")
lifetime = 3.0
interp_to_end = 0.166
one_shot = true
preprocess = 0.21
speed_scale = 1.69
explosiveness = 0.18
randomness = 0.2
collision_base_size = 0.0
process_material = SubResource("ParticleProcessMaterial_b26j0")

[node name="DeathExplode" type="GPUParticles2D" parent="."]
emitting = false
amount = 300
texture = SubResource("GradientTexture2D_ivps1")
interp_to_end = 0.166
one_shot = true
preprocess = 0.21
explosiveness = 0.18
randomness = 0.2
collision_base_size = 0.0
process_material = SubResource("ParticleProcessMaterial_b26j0")

[node name="ParticleThrust" type="GPUParticles2D" parent="."]
amount = 50
texture = SubResource("GradientTexture2D_b26j0")
process_material = SubResource("ParticleProcessMaterial_ivps1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
scale = Vector2(0.4, 0.4)
shape = SubResource("CapsuleShape2D_b26j0")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(6.96875, 6.96875)
texture = SubResource("GradientTexture2D_urp6f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="hit" from="." to="." method="_on_hit"]
